--- a/app/Kconfig
+++ b/app/Kconfig
@@ -331,14 +331,14 @@ config PM_DEVICE
 
 config ZMK_IDLE_SLEEP_TIMEOUT
     int "Milliseconds of inactivity before entering deep sleep"
-    default 900000
+    default 40000
 
 #ZMK_SLEEP
 endif
 
 config ZMK_EXT_POWER
     bool "Enable support to control external power output"
-    default n
+    default y
 
 #Power Management
 endmenu
